@@ -1,6 +1,11 @@
 
 h1. CHANGELOG
 
+h3. Version 10
+
+* Bug fixes for runscripts
+* temp files are written one by one instead of writing them altogether.
+
 h3. Version 9
 
 * Minor bug fixes for gzip support
